refactoring and CommScores

--- a/examples/Community Modeling/smetana/10-member_pairs_dev.ipynb
+++ b/examples/Community Modeling/smetana/10-member_pairs_dev.ipynb
@@ -4450,7 +4450,10 @@
    "cell_type": "code",
    "execution_count": 31,
    "id": "4bc23b8d-51dc-4561-a7e6-b89199f96aaf",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -5461,6 +5464,108 @@
    "source": [
     "comm_transports = comm_util.transport_list()\n",
     "display([(trans.id, trans.reactants) for trans in comm_transports])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9f77e729-aff0-4829-895c-29b7099bfed9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "modelseedpy.core.msminimalmedia - CRITICAL - The reaction bio1: 0.5 cpd11416_c1 + 0.5 cpd11416_c2 --> cpd11416_c0 lacks exchange metabolites, which indicates an error.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cpd00128_c1 in rxn05491_c1 (cpd00067_e0 + cpd00128_e0 <=> cpd00067_c1 + cpd00128_c1) is not received in the simulated interaction.\n",
+      "cpd00184_c2 in rxn05200_c2 (cpd00067_e0 + cpd00184_e0 <=> cpd00067_c2 + cpd00184_c2) is not received in the simulated interaction.\n",
+      "cpd00136_c2 in rxn12549_c2 (cpd00067_e0 + cpd00136_e0 <=> cpd00067_c2 + cpd00136_c2) is not received in the simulated interaction.\n",
+      "cpd00107_c1 in rxn05161_c1 (cpd00001_c1 + cpd00002_c1 + cpd00107_e0 --> cpd00008_c1 + cpd00009_c1 + cpd00067_c1 + cpd00107_c1) is not received in the simulated interaction.\n",
+      "cpd00051_c1 in rxn05154_c1 (cpd00001_c1 + cpd00002_c1 + cpd00051_e0 --> cpd00008_c1 + cpd00009_c1 + cpd00051_c1 + cpd00067_c1) is not received in the simulated interaction.\n",
+      "cpd00066_c2 in rxn05306_c2 (cpd00066_e0 + cpd00067_e0 <=> cpd00066_c2 + cpd00067_c2) is not received in the simulated interaction.\n",
+      "cpd00064_c1 in rxn05156_c1 (cpd00001_c1 + cpd00002_c1 + cpd00064_e0 --> cpd00008_c1 + cpd00009_c1 + cpd00064_c1 + cpd00067_c1) is not received in the simulated interaction.\n",
+      "cpd00119_c2 in rxn05299_c2 (cpd00067_e0 + cpd00119_e0 <=> cpd00067_c2 + cpd00119_c2) is not received in the simulated interaction.\n",
+      "cpd00054_c1 in rxn05307_c1 (cpd00054_e0 + cpd00067_e0 <=> cpd00054_c1 + cpd00067_c1) is not received in the simulated interaction.\n",
+      "cpd00132_c2 in rxn05508_c2 (cpd00067_e0 + cpd00132_e0 <=> cpd00067_c2 + cpd00132_c2) is not received in the simulated interaction.\n",
+      "cpd10516_c2 in rxn05195_c2 (cpd00001_c2 + cpd00002_c2 + cpd10516_e0 --> cpd00008_c2 + cpd00009_c2 + cpd00067_c2 + cpd10516_c2) is not received in the simulated interaction.\n",
+      "cpd00067_c1 in rxn08734_c1 (2 cpd00067_c1 + cpd11640_c1 + cpd15560_c1 --> 2 cpd00067_e0 + cpd15561_c1) is not received in the simulated interaction.\n",
+      "cpd00311_c1 in rxn05204_c1 (cpd00067_e0 + cpd00311_e0 <=> cpd00067_c1 + cpd00311_c1) is not received in the simulated interaction.\n",
+      "cpd00118_c1 in rxn05163_c1 (cpd00001_c1 + cpd00002_c1 + cpd00118_e0 --> cpd00008_c1 + cpd00009_c1 + cpd00067_c1 + cpd00118_c1) is not received in the simulated interaction.\n",
+      "cpd00067_c1 in rxn09003_c1 (2 cpd00067_c1 + cpd00209_c1 + cpd15499_c1 --> cpd00001_c1 + 2 cpd00067_e0 + cpd00075_c1 + cpd15500_c1) is not received in the simulated interaction.\n",
+      "cpd00119_c1 in rxn05164_c1 (cpd00001_c1 + cpd00002_c1 + cpd00119_e0 --> cpd00008_c1 + cpd00009_c1 + cpd00067_c1 + cpd00119_c1) is not received in the simulated interaction.\n",
+      "cpd10516_c1 in rxn05195_c1 (cpd00001_c1 + cpd00002_c1 + cpd10516_e0 --> cpd00008_c1 + cpd00009_c1 + cpd00067_c1 + cpd10516_c1) is not received in the simulated interaction.\n",
+      "cpd00067_c2 in rxn09295_c2 (cpd00004_c2 + cpd00006_c2 + 2 cpd00067_e0 --> cpd00003_c2 + cpd00005_c2 + 2 cpd00067_c2) is not received in the simulated interaction.\n",
+      "cpd00067_c2 in rxn08173_c2 (cpd00008_c2 + cpd00009_c2 + 4 cpd00067_e0 <=> cpd00001_c2 + cpd00002_c2 + 3 cpd00067_c2) is not received in the simulated interaction.\n",
+      "cpd00039_c2 in rxn05305_c2 (cpd00039_c2 + cpd00067_e0 <=> cpd00039_e0 + cpd00067_c2) is not received in the simulated interaction.\n",
+      "cpd00106_c2 in rxn05561_c2 (cpd00067_e0 + cpd00106_e0 --> cpd00067_c2 + cpd00106_c2) is not received in the simulated interaction.\n",
+      "cpd00064_c1 in rxn08153_c1 (cpd00051_e0 + cpd00064_c1 <=> cpd00051_c1 + cpd00064_e0) is not received in the simulated interaction.\n",
+      "cpd00039_c1 in rxn05151_c1 (cpd00001_c1 + cpd00002_c1 + cpd00039_e0 --> cpd00008_c1 + cpd00009_c1 + cpd00039_c1 + cpd00067_c1) is not received in the simulated interaction.\n",
+      "cpd00166_c1 in rxn08070_c1 (cpd00001_c1 + cpd00002_c1 + cpd00166_e0 --> cpd00008_c1 + cpd00009_c1 + cpd00067_c1 + cpd00166_c1) is not received in the simulated interaction.\n",
+      "cpd00179_c1 in rxn05170_c1 (cpd00001_c1 + cpd00002_c1 + cpd00179_e0 --> cpd00008_c1 + cpd00009_c1 + cpd00067_c1 + cpd00179_c1) is not received in the simulated interaction.\n",
+      "cpd00067_c1 in rxn10122_c1 (cpd00004_c1 + 4.5 cpd00067_c1 + cpd15560_c1 --> cpd00003_c1 + 3.5 cpd00067_e0 + cpd15561_c1) is not received in the simulated interaction.\n",
+      "cpd00166_c2 in rxn08070_c2 (cpd00001_c2 + cpd00002_c2 + cpd00166_e0 --> cpd00008_c2 + cpd00009_c2 + cpd00067_c2 + cpd00166_c2) is not received in the simulated interaction.\n",
+      "cpd00307_c1 in rxn05527_c1 (cpd00067_e0 + cpd00307_e0 <=> cpd00067_c1 + cpd00307_c1) is not received in the simulated interaction.\n",
+      "cpd00060_c1 in rxn09672_c1 (cpd00060_e0 + cpd00067_e0 <=> cpd00060_c1 + cpd00067_c1) is not received in the simulated interaction.\n",
+      "cpd00084_c1 in rxn09690_c1 (cpd00067_e0 + cpd00084_e0 <=> cpd00067_c1 + cpd00084_c1) is not received in the simulated interaction.\n",
+      "cpd00053_c1 in rxn09678_c1 (cpd00053_e0 + cpd00067_e0 <=> cpd00053_c1 + cpd00067_c1) is not received in the simulated interaction.\n",
+      "cpd00118_c1 in rxn05687_c1 (cpd00067_e0 + cpd00118_e0 <=> cpd00067_c1 + cpd00118_c1) is not received in the simulated interaction.\n",
+      "cpd00161_c1 in rxn05300_c1 (cpd00067_e0 + cpd00161_e0 <=> cpd00067_c1 + cpd00161_c1) is not received in the simulated interaction.\n",
+      "cpd00218_c1 in rxn05310_c1 (cpd00218_e0 <=> cpd00218_c1) is not received in the simulated interaction.\n",
+      "cpd00184_c1 in rxn05200_c1 (cpd00067_e0 + cpd00184_e0 <=> cpd00067_c1 + cpd00184_c1) is not received in the simulated interaction.\n",
+      "cpd00067_c1 in rxn09001_c1 (2 cpd00067_c1 + cpd00209_c1 + cpd15561_c1 --> cpd00001_c1 + 2 cpd00067_e0 + cpd00075_c1 + cpd15560_c1) is not received in the simulated interaction.\n",
+      "cpd00067_c1 in rxn09295_c1 (cpd00004_c1 + cpd00006_c1 + 2 cpd00067_e0 --> cpd00003_c1 + cpd00005_c1 + 2 cpd00067_c1) is not received in the simulated interaction.\n",
+      "cpd00060_c1 in rxn05219_c1 (cpd00001_c1 + cpd00002_c1 + cpd00060_e0 --> cpd00008_c1 + cpd00009_c1 + cpd00060_c1 + cpd00067_c1) is not received in the simulated interaction.\n",
+      "cpd00080_c1 in rxn05578_c1 (cpd00067_e0 + cpd00080_e0 <=> cpd00067_c1 + cpd00080_c1) is not received in the simulated interaction.\n",
+      "cpd00053_c1 in rxn05155_c1 (cpd00001_c1 + cpd00002_c1 + cpd00053_e0 --> cpd00008_c1 + cpd00009_c1 + cpd00053_c1 + cpd00067_c1) is not received in the simulated interaction.\n",
+      "cpd00179_c2 in rxn05170_c2 (cpd00001_c2 + cpd00002_c2 + cpd00179_e0 --> cpd00008_c2 + cpd00009_c2 + cpd00067_c2 + cpd00179_c2) is not received in the simulated interaction.\n",
+      "cpd00051_c2 in rxn05303_c2 (cpd00051_e0 + cpd00067_e0 <=> cpd00051_c2 + cpd00067_c2) is not received in the simulated interaction.\n",
+      "cpd00107_c2 in rxn05243_c2 (cpd00067_e0 + cpd00107_e0 <=> cpd00067_c2 + cpd00107_c2) is not received in the simulated interaction.\n",
+      "cpd00069_c2 in rxn05301_c2 (cpd00067_e0 + cpd00069_e0 <=> cpd00067_c2 + cpd00069_c2) is not received in the simulated interaction.\n",
+      "cpd00107_c2 in rxn05161_c2 (cpd00001_c2 + cpd00002_c2 + cpd00107_e0 --> cpd00008_c2 + cpd00009_c2 + cpd00067_c2 + cpd00107_c2) is not received in the simulated interaction.\n",
+      "cpd00268_c1 in rxn05176_c1 (cpd00001_c1 + cpd00002_c1 + cpd00268_e0 --> cpd00008_c1 + cpd00009_c1 + cpd00067_c1 + cpd00268_c1) is not received in the simulated interaction.\n",
+      "cpd00067_c1 in rxn10043_c1 (0.5 cpd00007_c1 + 6 cpd00067_c1 + 2 cpd00110_c1 --> cpd00001_c1 + 4 cpd00067_e0 + 2 cpd00109_c1) is not received in the simulated interaction.\n",
+      "cpd00106_c1 in rxn05561_c1 (cpd00067_e0 + cpd00106_e0 --> cpd00067_c1 + cpd00106_c1) is not received in the simulated interaction.\n",
+      "cpd10516_c1 in rxn05292_c1 (cpd10516_e0 --> cpd10516_c1) is not received in the simulated interaction.\n",
+      "cpd00067_c2 in rxn10122_c2 (cpd00004_c2 + 4.5 cpd00067_c2 + cpd15560_c2 --> cpd00003_c2 + 3.5 cpd00067_e0 + cpd15561_c2) is not received in the simulated interaction.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'GCF_001421425.1.RAST.fbamodel': ['cpd00136_c1',\n",
+       "   'cpd00066_c1',\n",
+       "   'cpd00039_c1',\n",
+       "   'cpd00107_c1',\n",
+       "   'cpd00051_c1',\n",
+       "   'cpd00132_c1',\n",
+       "   'cpd00119_c1',\n",
+       "   'cpd00067_c1',\n",
+       "   'cpd00069_c1'],\n",
+       "  'GCF_001421355.1.RAST.fbamodel': ['cpd00218_c2',\n",
+       "   'cpd00118_c2',\n",
+       "   'cpd00161_c2',\n",
+       "   'cpd00084_c2',\n",
+       "   'cpd00053_c2',\n",
+       "   'cpd00060_c2',\n",
+       "   'cpd00054_c2',\n",
+       "   'cpd00080_c2']}]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%run ../../../modelseedpy/community/mscommscores.py\n",
+    "\n",
+    "MSCommScores.mip(models)"
    ]
   },
   {
