--- a/examples/Community Modeling/smetana/10-member_pairs_dev.ipynb
+++ b/examples/Community Modeling/smetana/10-member_pairs_dev.ipynb
@@ -5468,104 +5468,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "9f77e729-aff0-4829-895c-29b7099bfed9",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "modelseedpy.core.msminimalmedia - CRITICAL - The reaction bio1: 0.5 cpd11416_c1 + 0.5 cpd11416_c2 --> cpd11416_c0 lacks exchange metabolites, which indicates an error.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cpd00128_c1 in rxn05491_c1 (cpd00067_e0 + cpd00128_e0 <=> cpd00067_c1 + cpd00128_c1) is not received in the simulated interaction.\n",
-      "cpd00184_c2 in rxn05200_c2 (cpd00067_e0 + cpd00184_e0 <=> cpd00067_c2 + cpd00184_c2) is not received in the simulated interaction.\n",
-      "cpd00136_c2 in rxn12549_c2 (cpd00067_e0 + cpd00136_e0 <=> cpd00067_c2 + cpd00136_c2) is not received in the simulated interaction.\n",
-      "cpd00107_c1 in rxn05161_c1 (cpd00001_c1 + cpd00002_c1 + cpd00107_e0 --> cpd00008_c1 + cpd00009_c1 + cpd00067_c1 + cpd00107_c1) is not received in the simulated interaction.\n",
-      "cpd00051_c1 in rxn05154_c1 (cpd00001_c1 + cpd00002_c1 + cpd00051_e0 --> cpd00008_c1 + cpd00009_c1 + cpd00051_c1 + cpd00067_c1) is not received in the simulated interaction.\n",
-      "cpd00066_c2 in rxn05306_c2 (cpd00066_e0 + cpd00067_e0 <=> cpd00066_c2 + cpd00067_c2) is not received in the simulated interaction.\n",
-      "cpd00064_c1 in rxn05156_c1 (cpd00001_c1 + cpd00002_c1 + cpd00064_e0 --> cpd00008_c1 + cpd00009_c1 + cpd00064_c1 + cpd00067_c1) is not received in the simulated interaction.\n",
-      "cpd00119_c2 in rxn05299_c2 (cpd00067_e0 + cpd00119_e0 <=> cpd00067_c2 + cpd00119_c2) is not received in the simulated interaction.\n",
-      "cpd00054_c1 in rxn05307_c1 (cpd00054_e0 + cpd00067_e0 <=> cpd00054_c1 + cpd00067_c1) is not received in the simulated interaction.\n",
-      "cpd00132_c2 in rxn05508_c2 (cpd00067_e0 + cpd00132_e0 <=> cpd00067_c2 + cpd00132_c2) is not received in the simulated interaction.\n",
-      "cpd10516_c2 in rxn05195_c2 (cpd00001_c2 + cpd00002_c2 + cpd10516_e0 --> cpd00008_c2 + cpd00009_c2 + cpd00067_c2 + cpd10516_c2) is not received in the simulated interaction.\n",
-      "cpd00067_c1 in rxn08734_c1 (2 cpd00067_c1 + cpd11640_c1 + cpd15560_c1 --> 2 cpd00067_e0 + cpd15561_c1) is not received in the simulated interaction.\n",
-      "cpd00311_c1 in rxn05204_c1 (cpd00067_e0 + cpd00311_e0 <=> cpd00067_c1 + cpd00311_c1) is not received in the simulated interaction.\n",
-      "cpd00118_c1 in rxn05163_c1 (cpd00001_c1 + cpd00002_c1 + cpd00118_e0 --> cpd00008_c1 + cpd00009_c1 + cpd00067_c1 + cpd00118_c1) is not received in the simulated interaction.\n",
-      "cpd00067_c1 in rxn09003_c1 (2 cpd00067_c1 + cpd00209_c1 + cpd15499_c1 --> cpd00001_c1 + 2 cpd00067_e0 + cpd00075_c1 + cpd15500_c1) is not received in the simulated interaction.\n",
-      "cpd00119_c1 in rxn05164_c1 (cpd00001_c1 + cpd00002_c1 + cpd00119_e0 --> cpd00008_c1 + cpd00009_c1 + cpd00067_c1 + cpd00119_c1) is not received in the simulated interaction.\n",
-      "cpd10516_c1 in rxn05195_c1 (cpd00001_c1 + cpd00002_c1 + cpd10516_e0 --> cpd00008_c1 + cpd00009_c1 + cpd00067_c1 + cpd10516_c1) is not received in the simulated interaction.\n",
-      "cpd00067_c2 in rxn09295_c2 (cpd00004_c2 + cpd00006_c2 + 2 cpd00067_e0 --> cpd00003_c2 + cpd00005_c2 + 2 cpd00067_c2) is not received in the simulated interaction.\n",
-      "cpd00067_c2 in rxn08173_c2 (cpd00008_c2 + cpd00009_c2 + 4 cpd00067_e0 <=> cpd00001_c2 + cpd00002_c2 + 3 cpd00067_c2) is not received in the simulated interaction.\n",
-      "cpd00039_c2 in rxn05305_c2 (cpd00039_c2 + cpd00067_e0 <=> cpd00039_e0 + cpd00067_c2) is not received in the simulated interaction.\n",
-      "cpd00106_c2 in rxn05561_c2 (cpd00067_e0 + cpd00106_e0 --> cpd00067_c2 + cpd00106_c2) is not received in the simulated interaction.\n",
-      "cpd00064_c1 in rxn08153_c1 (cpd00051_e0 + cpd00064_c1 <=> cpd00051_c1 + cpd00064_e0) is not received in the simulated interaction.\n",
-      "cpd00039_c1 in rxn05151_c1 (cpd00001_c1 + cpd00002_c1 + cpd00039_e0 --> cpd00008_c1 + cpd00009_c1 + cpd00039_c1 + cpd00067_c1) is not received in the simulated interaction.\n",
-      "cpd00166_c1 in rxn08070_c1 (cpd00001_c1 + cpd00002_c1 + cpd00166_e0 --> cpd00008_c1 + cpd00009_c1 + cpd00067_c1 + cpd00166_c1) is not received in the simulated interaction.\n",
-      "cpd00179_c1 in rxn05170_c1 (cpd00001_c1 + cpd00002_c1 + cpd00179_e0 --> cpd00008_c1 + cpd00009_c1 + cpd00067_c1 + cpd00179_c1) is not received in the simulated interaction.\n",
-      "cpd00067_c1 in rxn10122_c1 (cpd00004_c1 + 4.5 cpd00067_c1 + cpd15560_c1 --> cpd00003_c1 + 3.5 cpd00067_e0 + cpd15561_c1) is not received in the simulated interaction.\n",
-      "cpd00166_c2 in rxn08070_c2 (cpd00001_c2 + cpd00002_c2 + cpd00166_e0 --> cpd00008_c2 + cpd00009_c2 + cpd00067_c2 + cpd00166_c2) is not received in the simulated interaction.\n",
-      "cpd00307_c1 in rxn05527_c1 (cpd00067_e0 + cpd00307_e0 <=> cpd00067_c1 + cpd00307_c1) is not received in the simulated interaction.\n",
-      "cpd00060_c1 in rxn09672_c1 (cpd00060_e0 + cpd00067_e0 <=> cpd00060_c1 + cpd00067_c1) is not received in the simulated interaction.\n",
-      "cpd00084_c1 in rxn09690_c1 (cpd00067_e0 + cpd00084_e0 <=> cpd00067_c1 + cpd00084_c1) is not received in the simulated interaction.\n",
-      "cpd00053_c1 in rxn09678_c1 (cpd00053_e0 + cpd00067_e0 <=> cpd00053_c1 + cpd00067_c1) is not received in the simulated interaction.\n",
-      "cpd00118_c1 in rxn05687_c1 (cpd00067_e0 + cpd00118_e0 <=> cpd00067_c1 + cpd00118_c1) is not received in the simulated interaction.\n",
-      "cpd00161_c1 in rxn05300_c1 (cpd00067_e0 + cpd00161_e0 <=> cpd00067_c1 + cpd00161_c1) is not received in the simulated interaction.\n",
-      "cpd00218_c1 in rxn05310_c1 (cpd00218_e0 <=> cpd00218_c1) is not received in the simulated interaction.\n",
-      "cpd00184_c1 in rxn05200_c1 (cpd00067_e0 + cpd00184_e0 <=> cpd00067_c1 + cpd00184_c1) is not received in the simulated interaction.\n",
-      "cpd00067_c1 in rxn09001_c1 (2 cpd00067_c1 + cpd00209_c1 + cpd15561_c1 --> cpd00001_c1 + 2 cpd00067_e0 + cpd00075_c1 + cpd15560_c1) is not received in the simulated interaction.\n",
-      "cpd00067_c1 in rxn09295_c1 (cpd00004_c1 + cpd00006_c1 + 2 cpd00067_e0 --> cpd00003_c1 + cpd00005_c1 + 2 cpd00067_c1) is not received in the simulated interaction.\n",
-      "cpd00060_c1 in rxn05219_c1 (cpd00001_c1 + cpd00002_c1 + cpd00060_e0 --> cpd00008_c1 + cpd00009_c1 + cpd00060_c1 + cpd00067_c1) is not received in the simulated interaction.\n",
-      "cpd00080_c1 in rxn05578_c1 (cpd00067_e0 + cpd00080_e0 <=> cpd00067_c1 + cpd00080_c1) is not received in the simulated interaction.\n",
-      "cpd00053_c1 in rxn05155_c1 (cpd00001_c1 + cpd00002_c1 + cpd00053_e0 --> cpd00008_c1 + cpd00009_c1 + cpd00053_c1 + cpd00067_c1) is not received in the simulated interaction.\n",
-      "cpd00179_c2 in rxn05170_c2 (cpd00001_c2 + cpd00002_c2 + cpd00179_e0 --> cpd00008_c2 + cpd00009_c2 + cpd00067_c2 + cpd00179_c2) is not received in the simulated interaction.\n",
-      "cpd00051_c2 in rxn05303_c2 (cpd00051_e0 + cpd00067_e0 <=> cpd00051_c2 + cpd00067_c2) is not received in the simulated interaction.\n",
-      "cpd00107_c2 in rxn05243_c2 (cpd00067_e0 + cpd00107_e0 <=> cpd00067_c2 + cpd00107_c2) is not received in the simulated interaction.\n",
-      "cpd00069_c2 in rxn05301_c2 (cpd00067_e0 + cpd00069_e0 <=> cpd00067_c2 + cpd00069_c2) is not received in the simulated interaction.\n",
-      "cpd00107_c2 in rxn05161_c2 (cpd00001_c2 + cpd00002_c2 + cpd00107_e0 --> cpd00008_c2 + cpd00009_c2 + cpd00067_c2 + cpd00107_c2) is not received in the simulated interaction.\n",
-      "cpd00268_c1 in rxn05176_c1 (cpd00001_c1 + cpd00002_c1 + cpd00268_e0 --> cpd00008_c1 + cpd00009_c1 + cpd00067_c1 + cpd00268_c1) is not received in the simulated interaction.\n",
-      "cpd00067_c1 in rxn10043_c1 (0.5 cpd00007_c1 + 6 cpd00067_c1 + 2 cpd00110_c1 --> cpd00001_c1 + 4 cpd00067_e0 + 2 cpd00109_c1) is not received in the simulated interaction.\n",
-      "cpd00106_c1 in rxn05561_c1 (cpd00067_e0 + cpd00106_e0 --> cpd00067_c1 + cpd00106_c1) is not received in the simulated interaction.\n",
-      "cpd10516_c1 in rxn05292_c1 (cpd10516_e0 --> cpd10516_c1) is not received in the simulated interaction.\n",
-      "cpd00067_c2 in rxn10122_c2 (cpd00004_c2 + 4.5 cpd00067_c2 + cpd15560_c2 --> cpd00003_c2 + 3.5 cpd00067_e0 + cpd15561_c2) is not received in the simulated interaction.\n"
+      "The minimal flux media consists of 44 compounds and a 4.151288539419262 total influx, with a growth value of 0.09999999999969633\n",
+      "The minimal flux media consists of 38 compounds and a 1.9202602818295504 total influx, with a growth value of 0.1000000000003654\n",
+      "The minimal media of all members:\n",
+      "{'GCF_001421355.1.RAST.fbamodel': {'media': {'EX_cpd00041_e0': 0.8500615052140678, 'EX_cpd00048_e0': 0.00028061591595913103, 'EX_cpd00277_e0': 0.002143191525201281, 'EX_cpd00084_e0': 0.008456496968442246, 'EX_cpd00156_e0': 0.035223318909162506, 'EX_cpd00220_e0': 0.0008418477478773828, 'EX_cpd00164_e0': 0.81397420852564, 'EX_cpd00215_e0': 0.00028061591595913103, 'EX_cpd00007_e0': 0.0007015397898978277, 'EX_cpd00119_e0': 0.00792636000737159, 'EX_cpd00254_e0': 0.0002806159159591311, 'EX_cpd10515_e0': 0.0008418477478773932, 'EX_cpd00039_e0': 0.028543802049017904, 'EX_cpd00034_e0': 0.00028061591595913114, 'EX_cpd00099_e0': 0.000280615915959131, 'EX_cpd00264_e0': 0.00028061591595913114, 'EX_cpd15605_e0': 0.015451949003134501, 'EX_cpd00030_e0': 0.00028061591595913114, 'EX_cpd00080_e0': 0.08097454046939985, 'EX_cpd00017_e0': 0.013060758175035839, 'EX_cpd00136_e0': 0.00028061591595913114, 'EX_cpd00118_e0': 0.00028061591595913114, 'EX_cpd00063_e0': 0.00028061591595913114, 'EX_cpd00065_e0': 0.004720191914502181, 'EX_cpd00794_e0': 0.7946305872638507, 'EX_cpd00116_e0': 4.0180505938991466e-20, 'EX_cpd00205_e0': 0.0002806159159591311, 'EX_cpd00028_e0': 0.00028061591595913103, 'EX_cpd00069_e0': 0.012067660460661203, 'EX_cpd00058_e0': 0.00028061591595913103, 'EX_cpd00104_e0': 0.0002806159159591311, 'EX_cpd00149_e0': 0.00028061591595913103, 'EX_cpd00184_e0': 0.001060383250884341, 'EX_cpd00107_e0': 0.03753888475401271, 'EX_cpd11592_e0': 3.9948522697818585e-14, 'EX_cpd00793_e0': 0.0002806159159591311, 'EX_cpd00322_e0': 0.024179851033723502, 'EX_cpd00137_e0': 1.337781485290748, 'EX_cpd00051_e0': 0.024669682270134108, 'EX_cpd00393_e0': 0.0008418477478773897, 'EX_cpd00644_e0': 0.0005612318319182697, 'EX_cpd00132_e0': 0.020083080692970295, 'EX_cpd00218_e0': 0.0005612318315192908, 'EX_cpd11589_e0': 0.029901200288947057}}, 'GCF_001421425.1.RAST.fbamodel': {'media': {'EX_cpd00307_e0': 0.01033904711998695, 'EX_cpd00048_e0': 0.0002806159159591311, 'EX_cpd00268_e0': 0.004228248483849132, 'EX_cpd00156_e0': 0.035223318909162506, 'EX_cpd00220_e0': 0.0008418477478773934, 'EX_cpd00311_e0': 0.015469367674970164, 'EX_cpd00215_e0': 0.00028061591595913103, 'EX_cpd00007_e0': 0.029951341661733202, 'EX_cpd00119_e0': 0.007926360007371755, 'EX_cpd00254_e0': 0.00028061591595913114, 'EX_cpd10515_e0': 0.0008418477478773931, 'EX_cpd00034_e0': 0.0002806159159591311, 'EX_cpd00264_e0': 0.0002806159159591311, 'EX_cpd00099_e0': 0.0002806159159591311, 'EX_cpd00030_e0': 0.00028061591595913103, 'EX_cpd00017_e0': 0.013060758175035833, 'EX_cpd00136_e0': 0.00028061591595913114, 'EX_cpd00179_e0': 0.04788995859086058, 'EX_cpd00063_e0': 0.00028061591595913103, 'EX_cpd00066_e0': 0.015451949003134506, 'EX_cpd00065_e0': 0.004720191914502181, 'EX_cpd00205_e0': 0.0002806159159591311, 'EX_cpd00355_e0': 1.1828469143528135, 'EX_cpd03847_e0': 0.00250105977102394, 'EX_cpd00028_e0': 0.0002806159159591311, 'EX_cpd00069_e0': 0.012067660460661203, 'EX_cpd00058_e0': 0.0002806159159591311, 'EX_cpd00104_e0': 0.00028061591595913103, 'EX_cpd00149_e0': 0.00028061591595913114, 'EX_cpd00107_e0': 0.03753888475401271, 'EX_cpd00793_e0': 0.00028061591595913234, 'EX_cpd00128_e0': 0.0009156220199749764, 'EX_cpd01080_e0': 0.024916275954458823, 'EX_cpd00322_e0': 0.02417985103372351, 'EX_cpd00209_e0': 0.41906777585720323, 'EX_cpd00051_e0': 0.024669682270134104, 'EX_cpd00393_e0': 0.0008418477478773935, 'EX_cpd00644_e0': 0.0005612318319183174}}}\n",
+      "\n",
+      "Examining the 1 model pairs\n",
+      "MainProcess~~0\t['GCF_001421355.1.RAST.fbamodel', 'GCF_001421425.1.RAST.fbamodel']\n",
+      "\tEnvironment0: None\tMRO done\tCIP done\tcostless_mip  done\tMIP done\t"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "[{'GCF_001421425.1.RAST.fbamodel': ['cpd00136_c1',\n",
-       "   'cpd00066_c1',\n",
-       "   'cpd00039_c1',\n",
-       "   'cpd00107_c1',\n",
-       "   'cpd00051_c1',\n",
-       "   'cpd00132_c1',\n",
-       "   'cpd00119_c1',\n",
-       "   'cpd00067_c1',\n",
-       "   'cpd00069_c1'],\n",
-       "  'GCF_001421355.1.RAST.fbamodel': ['cpd00218_c2',\n",
-       "   'cpd00118_c2',\n",
-       "   'cpd00161_c2',\n",
-       "   'cpd00084_c2',\n",
-       "   'cpd00053_c2',\n",
-       "   'cpd00060_c2',\n",
-       "   'cpd00054_c2',\n",
-       "   'cpd00080_c2']}]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'Model' object has no attribute 'members'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39mrun_line_magic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrun\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../../../modelseedpy/community/mscommscores.py\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m----> 3\u001b[0m \u001b[43mMSCommScores\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mkbase_output\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodels\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m~\\Documents\\Argonne\\ModelSEED\\ModelSEEDpy\\modelseedpy\\community\\mscommscores.py:371\u001b[0m, in \u001b[0;36mMSCommScores.kbase_output\u001b[1;34m(all_models, pairs, mem_media, pair_limit, exclude_pairs, kbase_obj, directional_pairs, RAST_genomes, see_media, environments, pool_size, cip_score, costless, pc)\u001b[0m\n\u001b[0;32m    369\u001b[0m     series \u001b[38;5;241m=\u001b[39m chain\u001b[38;5;241m.\u001b[39mfrom_iterable([ele[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m ele \u001b[38;5;129;01min\u001b[39;00m output])\n\u001b[0;32m    370\u001b[0m     mets \u001b[38;5;241m=\u001b[39m chain\u001b[38;5;241m.\u001b[39mfrom_iterable([ele[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m ele \u001b[38;5;129;01min\u001b[39;00m output])\n\u001b[1;32m--> 371\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:  series, mets \u001b[38;5;241m=\u001b[39m \u001b[43mMSCommScores\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcalculate_scores\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpairs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodels_media\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43menvironments\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mRAST_genomes\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlazy_load\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    372\u001b[0m \u001b[43m                                                    \u001b[49m\u001b[43mkbase_obj\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcip_score\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcostless\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    373\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m concat(series, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m.\u001b[39mT, mets\n",
+      "File \u001b[1;32m~\\Documents\\Argonne\\ModelSEED\\ModelSEEDpy\\modelseedpy\\community\\mscommscores.py:305\u001b[0m, in \u001b[0;36mMSCommScores.calculate_scores\u001b[1;34m(pairs, models_media, environments, RAST_genomes, lazy_load, kbase_obj, cip_score, costless)\u001b[0m\n\u001b[0;32m    303\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcostless_mip  done\u001b[39m\u001b[38;5;124m\"\u001b[39m, end\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    304\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMIP done\u001b[39m\u001b[38;5;124m\"\u001b[39m, end\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m--> 305\u001b[0m kbase_dic\u001b[38;5;241m.\u001b[39mupdate({\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpc\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[43mMSCommScores\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgrouping\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcomm_model\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcomm_sol\u001b[49m\u001b[43m)\u001b[49m[\u001b[38;5;241m0\u001b[39m]})\n\u001b[0;32m    306\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPC  done\u001b[39m\u001b[38;5;124m\"\u001b[39m, end\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    307\u001b[0m interaction_info \u001b[38;5;241m=\u001b[39m MSCommScores\u001b[38;5;241m.\u001b[39mbit(grouping, comm_model, comm_sol\u001b[38;5;241m=\u001b[39mcomm_sol)\n",
+      "File \u001b[1;32m~\\Documents\\Argonne\\ModelSEED\\ModelSEEDpy\\modelseedpy\\community\\mscommscores.py:637\u001b[0m, in \u001b[0;36mMSCommScores.pc\u001b[1;34m(member_models, com_model, comm_sol, comm_effects, printing, compatibilized)\u001b[0m\n\u001b[0;32m    635\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m comm_effects:  \u001b[38;5;28;01mreturn\u001b[39;00m pc_score\n\u001b[0;32m    636\u001b[0m \u001b[38;5;66;03m# TODO possibly leverage the ineraction_type() function instead of duplicated the following logic\u001b[39;00m\n\u001b[1;32m--> 637\u001b[0m comm_member_growths \u001b[38;5;241m=\u001b[39m {mem\u001b[38;5;241m.\u001b[39mid: comm_sol\u001b[38;5;241m.\u001b[39mfluxes[mem\u001b[38;5;241m.\u001b[39mprimary_biomass] \u001b[38;5;28;01mfor\u001b[39;00m mem \u001b[38;5;129;01min\u001b[39;00m \u001b[43mcom_model\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmembers\u001b[49m}\n\u001b[0;32m    638\u001b[0m comm_growth_effect \u001b[38;5;241m=\u001b[39m {mem\u001b[38;5;241m.\u001b[39mid: comm_member_growths[mem\u001b[38;5;241m.\u001b[39mid]\u001b[38;5;241m/\u001b[39mmember_growths[mem\u001b[38;5;241m.\u001b[39mid] \u001b[38;5;28;01mfor\u001b[39;00m mem \u001b[38;5;129;01min\u001b[39;00m member_growths}\n\u001b[0;32m    639\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m (pc_score, comm_growth_effect)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Model' object has no attribute 'members'"
+     ]
     }
    ],
    "source": [
     "%run ../../../modelseedpy/community/mscommscores.py\n",
     "\n",
-    "MSCommScores.mip(models)"
+    "MSCommScores.kbase_output(models)"
    ]
   },
   {
