--- a/examples/Community Modeling/smetana/10-member_pairs_dev.ipynb
+++ b/examples/Community Modeling/smetana/10-member_pairs_dev.ipynb
@@ -5479,31 +5479,87 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The minimal flux media consists of 38 compounds and a 1.920260281830449 total influx, with a growth value of 0.10000000000031445\n",
-      "The minimal flux media consists of 46 compounds and a 4.151288539424301 total influx, with a growth value of 0.09999999999999996\n",
+      "The minimal flux media consists of 38 compounds and a 1.920260281831602 total influx, with a growth value of 0.10000000000029623\n",
+      "The minimal flux media consists of 44 compounds and a 4.151288539405313 total influx, with a growth value of 0.09999999999941046\n",
       "The minimal media of all members:\n",
-      "{'GCF_001421425.1.RAST.fbamodel': {'media': {'EX_cpd00007_e0': 0.02995134166202203, 'EX_cpd00393_e0': 0.0008418477478773936, 'EX_cpd00254_e0': 0.00028061591595913114, 'EX_cpd00099_e0': 0.0002806159159591311, 'EX_cpd00264_e0': 0.0002806159159591311, 'EX_cpd00156_e0': 0.035223318909162506, 'EX_cpd00065_e0': 0.004720191914502181, 'EX_cpd10515_e0': 0.0008418477478773931, 'EX_cpd03847_e0': 0.0025010597710789185, 'EX_cpd00107_e0': 0.03753888475401271, 'EX_cpd00215_e0': 0.00028061591595913103, 'EX_cpd00136_e0': 0.00028061591595913114, 'EX_cpd00209_e0': 0.4190677758574633, 'EX_cpd00119_e0': 0.007926360007371592, 'EX_cpd01080_e0': 0.024916275954454097, 'EX_cpd00644_e0': 0.0005612318319689539, 'EX_cpd00104_e0': 0.00028061591595913103, 'EX_cpd00793_e0': 0.00028061591595913103, 'EX_cpd00205_e0': 0.0002806159159591311, 'EX_cpd00322_e0': 0.02417985103372351, 'EX_cpd00051_e0': 0.024669682270134104, 'EX_cpd00355_e0': 1.1828469143549463, 'EX_cpd00268_e0': 0.004228248483954961, 'EX_cpd00311_e0': 0.015469367674970166, 'EX_cpd00149_e0': 0.00028061591595913114, 'EX_cpd00063_e0': 0.00028061591595913103, 'EX_cpd00307_e0': 0.010339047120046487, 'EX_cpd00066_e0': 0.015451949003134506, 'EX_cpd00069_e0': 0.012067660460661203, 'EX_cpd00058_e0': 0.0002806159159591311, 'EX_cpd00048_e0': 0.0002806159159591311, 'EX_cpd00128_e0': 0.0009156220193323842, 'EX_cpd00030_e0': 0.00028061591595913103, 'EX_cpd00179_e0': 0.047889958589453795, 'EX_cpd00017_e0': 0.013060758175035833, 'EX_cpd00034_e0': 0.0002806159159591311, 'EX_cpd00028_e0': 0.0002806159159591311, 'EX_cpd00220_e0': 0.0008418477478773932}}, 'GCF_001421355.1.RAST.fbamodel': {'media': {'EX_cpd00007_e0': 0.0007015397895396515, 'EX_cpd00393_e0': 0.0008418477478773828, 'EX_cpd00254_e0': 0.0002806159159591311, 'EX_cpd00099_e0': 0.000280615915959131, 'EX_cpd00080_e0': 0.08097454047260697, 'EX_cpd00156_e0': 0.035223318909162506, 'EX_cpd00264_e0': 0.00028061591595913114, 'EX_cpd00118_e0': 0.00028061591595913114, 'EX_cpd00065_e0': 0.004720191914502181, 'EX_cpd11583_e0': 1.503522557750281e-17, 'EX_cpd00164_e0': 0.8139742085535073, 'EX_cpd10515_e0': 0.0008418477478773932, 'EX_cpd00277_e0': 0.002143191525201281, 'EX_cpd00215_e0': 0.00028061591595913103, 'EX_cpd00107_e0': 0.037538884754012694, 'EX_cpd00136_e0': 0.00028061591595913114, 'EX_cpd00184_e0': 0.001060383250884341, 'EX_cpd00119_e0': 0.00792636000737159, 'EX_cpd00041_e0': 0.8430660531952175, 'EX_cpd00132_e0': 0.020083080692834803, 'EX_cpd00644_e0': 0.0005612318319181599, 'EX_cpd15606_e0': 1.576445711185791e-13, 'EX_cpd01017_e0': 0.0002806159159591311, 'EX_cpd00137_e0': 1.3377814852598158, 'EX_cpd00104_e0': 0.00028061591595913103, 'EX_cpd00218_e0': 0.0005612318317825496, 'EX_cpd00793_e0': 0.0002806159159591311, 'EX_cpd00205_e0': 0.0002806159159591311, 'EX_cpd00322_e0': 0.024179851033723502, 'EX_cpd00051_e0': 0.024669682270134108, 'EX_cpd11589_e0': 0.036896652320305943, 'EX_cpd00149_e0': 0.00028061591595913103, 'EX_cpd00063_e0': 0.00028061591595913114, 'EX_cpd00066_e0': 0.015451949003134503, 'EX_cpd00069_e0': 0.012067660460644312, 'EX_cpd00058_e0': 0.00028061591595913103, 'EX_cpd00039_e0': 0.028543802049017904, 'EX_cpd00048_e0': 0.00028061591595913103, 'EX_cpd00030_e0': 0.00028061591595913114, 'EX_cpd00794_e0': 0.01000423908435776, 'EX_cpd00179_e0': 0.7846263481720106, 'EX_cpd00017_e0': 0.013060758175035835, 'EX_cpd15603_e0': 0.008175881052483002, 'EX_cpd00028_e0': 0.00028061591595913103, 'EX_cpd00034_e0': 0.00028061591595913114, 'EX_cpd00220_e0': 0.0008418477478774158}}}\n",
+      "{'GCF_001421425.1.RAST.fbamodel': {'media': {'EX_cpd03847_e0': 0.0025010597710810748, 'EX_cpd00034_e0': 0.0002806159159591311, 'EX_cpd00393_e0': 0.0008418477478773926, 'EX_cpd00268_e0': 0.004228248484070404, 'EX_cpd00119_e0': 0.007926360007178198, 'EX_cpd00128_e0': 0.0009156220201908611, 'EX_cpd00104_e0': 0.00028061591595913103, 'EX_cpd00051_e0': 0.024669682270134104, 'EX_cpd00030_e0': 0.00028061591595913103, 'EX_cpd00205_e0': 0.0002806159159591311, 'EX_cpd00149_e0': 0.00028061591595913114, 'EX_cpd00179_e0': 0.04788995858865938, 'EX_cpd00048_e0': 0.0002806159159591311, 'EX_cpd00307_e0': 0.010339047120046496, 'EX_cpd10515_e0': 0.0008418477478773931, 'EX_cpd00264_e0': 0.0002806159159591311, 'EX_cpd00063_e0': 0.00028061591595913103, 'EX_cpd00215_e0': 0.00028061591595913103, 'EX_cpd00058_e0': 0.0002806159159591311, 'EX_cpd00254_e0': 0.00028061591595913114, 'EX_cpd00107_e0': 0.03753888475401271, 'EX_cpd00793_e0': 0.00028061591586243446, 'EX_cpd00220_e0': 0.0008418477478773934, 'EX_cpd00355_e0': 1.1828469143570204, 'EX_cpd00066_e0': 0.015451949003134506, 'EX_cpd00017_e0': 0.013060758175035833, 'EX_cpd00136_e0': 0.00028061591595913114, 'EX_cpd00099_e0': 0.0002806159159591311, 'EX_cpd00156_e0': 0.035223318909162506, 'EX_cpd00007_e0': 0.02995134166205807, 'EX_cpd00028_e0': 0.0002806159159591311, 'EX_cpd00311_e0': 0.015469367674740756, 'EX_cpd00209_e0': 0.41906777585716937, 'EX_cpd00322_e0': 0.02417985103372351, 'EX_cpd00644_e0': 0.0005612318316441591, 'EX_cpd00069_e0': 0.012067660460661203, 'EX_cpd00065_e0': 0.004720191914502181, 'EX_cpd01080_e0': 0.024916275954454035}}, 'GCF_001421355.1.RAST.fbamodel': {'media': {'EX_cpd00034_e0': 0.00028061591595913114, 'EX_cpd00393_e0': 0.0008418477478773932, 'EX_cpd00119_e0': 0.007926360007371598, 'EX_cpd00104_e0': 0.00028061591595913103, 'EX_cpd00118_e0': 0.00028061591595913114, 'EX_cpd00051_e0': 0.024669682270134108, 'EX_cpd00030_e0': 0.00028061591595913114, 'EX_cpd00205_e0': 0.0002806159159591311, 'EX_cpd00149_e0': 0.00028061591595913103, 'EX_cpd00179_e0': 0.7846263481768759, 'EX_cpd00048_e0': 0.00028061591595913103, 'EX_cpd00084_e0': 0.008456496968442263, 'EX_cpd00184_e0': 0.001060383250884341, 'EX_cpd10515_e0': 0.0008418477478773932, 'EX_cpd00137_e0': 1.3377814852885535, 'EX_cpd00041_e0': 0.834609556212117, 'EX_cpd00264_e0': 0.00028061591595913114, 'EX_cpd00063_e0': 0.00028061591595913114, 'EX_cpd00215_e0': 0.00028061591595913103, 'EX_cpd00058_e0': 0.00028061591595913103, 'EX_cpd00254_e0': 0.0002806159159591311, 'EX_cpd00107_e0': 0.03753888475401271, 'EX_cpd00793_e0': 0.0002806159159591311, 'EX_cpd00220_e0': 0.000841847747877422, 'EX_cpd00794_e0': 0.01000423908435776, 'EX_cpd00066_e0': 0.015451949003134503, 'EX_cpd11589_e0': 0.04535314928998137, 'EX_cpd11587_e0': 1.8584445067978568e-17, 'EX_cpd00017_e0': 0.013060758175035839, 'EX_cpd00136_e0': 0.00028061591595913114, 'EX_cpd00080_e0': 0.08097454046961709, 'EX_cpd00164_e0': 0.8139742085180528, 'EX_cpd00099_e0': 0.000280615915959131, 'EX_cpd00156_e0': 0.035223318909162506, 'EX_cpd00277_e0': 0.002143191525201281, 'EX_cpd00007_e0': 0.000701539789600936, 'EX_cpd00028_e0': 0.00028061591595913103, 'EX_cpd00322_e0': 0.024179851033723502, 'EX_cpd00039_e0': 0.028543802049017904, 'EX_cpd00218_e0': 0.0005612318311411902, 'EX_cpd00644_e0': 0.0005612318319182915, 'EX_cpd00132_e0': 0.020083080692834803, 'EX_cpd00069_e0': 0.012067660460661203, 'EX_cpd00065_e0': 0.004720191914502181}}}\n",
       "\n",
       "Examining the 1 model pairs\n",
       "cpd11416_c0 bio1: 0.5 cpd11416_c1 + 0.5 cpd11416_c2 --> cpd11416_c0\n",
       "primary biomass defined bio1\n",
       "cpd11416_c0 SK_cpd11416_c0: cpd11416_c0 <=> \n",
       "MainProcess~~0\t['GCF_001421425.1.RAST.fbamodel', 'GCF_001421355.1.RAST.fbamodel']\n",
-      "\tEnvironment0: None\tMRO done\tCIP done\t"
+      "\tEnvironment0: None\tMRO done\tCIP done\tcostless_mip  done\tMIP done\tPC  done\tBIT done\tGYD done\t\t\tRFC done\t\t\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for +=: 'int' and 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39mrun_line_magic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrun\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../../../modelseedpy/community/mscommscores.py\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m----> 3\u001b[0m display(\u001b[43mMSCommScores\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mkbase_output\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodels\u001b[49m\u001b[43m)\u001b[49m[\u001b[38;5;241m0\u001b[39m])\n",
-      "File \u001b[1;32m~\\Documents\\Argonne\\ModelSEED\\ModelSEEDpy\\modelseedpy\\community\\mscommscores.py:373\u001b[0m, in \u001b[0;36mMSCommScores.kbase_output\u001b[1;34m(all_models, pairs, mem_media, pair_limit, exclude_pairs, kbase_obj, directional_pairs, RAST_genomes, see_media, environments, pool_size, cip_score, costless, pc)\u001b[0m\n\u001b[0;32m    371\u001b[0m     series \u001b[38;5;241m=\u001b[39m chain\u001b[38;5;241m.\u001b[39mfrom_iterable([ele[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m ele \u001b[38;5;129;01min\u001b[39;00m output])\n\u001b[0;32m    372\u001b[0m     mets \u001b[38;5;241m=\u001b[39m chain\u001b[38;5;241m.\u001b[39mfrom_iterable([ele[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m ele \u001b[38;5;129;01min\u001b[39;00m output])\n\u001b[1;32m--> 373\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:  series, mets \u001b[38;5;241m=\u001b[39m \u001b[43mMSCommScores\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcalculate_scores\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpairs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodels_media\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43menvironments\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mRAST_genomes\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlazy_load\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    374\u001b[0m \u001b[43m                                                    \u001b[49m\u001b[43mkbase_obj\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcip_score\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcostless\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    375\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m concat(series, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m.\u001b[39mT, mets\n",
-      "File \u001b[1;32m~\\Documents\\Argonne\\ModelSEED\\ModelSEEDpy\\modelseedpy\\community\\mscommscores.py:303\u001b[0m, in \u001b[0;36mMSCommScores.calculate_scores\u001b[1;34m(pairs, models_media, environments, RAST_genomes, lazy_load, kbase_obj, cip_score, costless)\u001b[0m\n\u001b[0;32m    301\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m costless:\n\u001b[0;32m    302\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m models_name, received \u001b[38;5;129;01min\u001b[39;00m mip_values[\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m.\u001b[39mitems():\n\u001b[1;32m--> 303\u001b[0m         kbase_dic[\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmip_model\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmodelIDs\u001b[38;5;241m.\u001b[39mindex(models_name)\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m (\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(received)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m)\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    304\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcostless_mip  done\u001b[39m\u001b[38;5;124m\"\u001b[39m, end\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    305\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMIP done\u001b[39m\u001b[38;5;124m\"\u001b[39m, end\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +=: 'int' and 'str'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model1</th>\n",
+       "      <th>model2</th>\n",
+       "      <th>media</th>\n",
+       "      <th>mro_model1</th>\n",
+       "      <th>mro_model2</th>\n",
+       "      <th>cip</th>\n",
+       "      <th>mip_model1</th>\n",
+       "      <th>mip_model2</th>\n",
+       "      <th>pc</th>\n",
+       "      <th>bit</th>\n",
+       "      <th>gyd</th>\n",
+       "      <th>RFC</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>GCF_001421425.1.RAST.fbamodel</td>\n",
+       "      <td>GCF_001421355.1.RAST.fbamodel</td>\n",
+       "      <td>None0</td>\n",
+       "      <td>0.78947 (30/38)</td>\n",
+       "      <td>0.68182 (30/44)</td>\n",
+       "      <td>24</td>\n",
+       "      <td>10 (2)</td>\n",
+       "      <td>6 (2)</td>\n",
+       "      <td>0.728774</td>\n",
+       "      <td>amensalism (0.79904)</td>\n",
+       "      <td>0.799041</td>\n",
+       "      <td>0.334624</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          model1                         model2  media  \\\n",
+       "0  GCF_001421425.1.RAST.fbamodel  GCF_001421355.1.RAST.fbamodel  None0   \n",
+       "\n",
+       "        mro_model1       mro_model2 cip mip_model1 mip_model2        pc  \\\n",
+       "0  0.78947 (30/38)  0.68182 (30/44)  24     10 (2)      6 (2)  0.728774   \n",
+       "\n",
+       "                    bit       gyd       RFC  \n",
+       "0  amensalism (0.79904)  0.799041  0.334624  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
